--- a/ITSwitch-Demo/ITSwitch-Demo/Base.lproj/MainMenu.xib
+++ b/ITSwitch-Demo/ITSwitch-Demo/Base.lproj/MainMenu.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -649,26 +649,51 @@
         <window title="ITSwitch-Demo" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="371">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="72" height="60"/>
+            <rect key="contentRect" x="335" y="390" width="152" height="143"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
             <view key="contentView" wantsLayer="YES" id="372">
-                <rect key="frame" x="0.0" y="0.0" width="72" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="152" height="143"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="0QQ-Rg-pWh" customClass="ITSwitch">
-                        <rect key="frame" x="20" y="20" width="32" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <customView id="0QQ-Rg-pWh" customClass="ITSwitch">
+                        <rect key="frame" x="60" y="103" width="32" height="20"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
+                                <color key="value" red="0.090196078431372548" green="0.49411764705882355" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                         <connections>
                             <action selector="switchChanged:" target="494" id="mqT-HI-dN0"/>
                         </connections>
                     </customView>
+                    <customView id="KC3-Wk-7Tp" customClass="ITSwitch">
+                        <rect key="frame" x="20" y="20" width="112" height="70"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <connections>
+                            <action selector="switchChanged:" target="494" id="l3m-Qd-48v"/>
+                        </connections>
+                    </customView>
+                    <customView id="wbL-QI-qCf" customClass="ITSwitch">
+                        <rect key="frame" x="20" y="103" width="32" height="20"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <connections>
+                            <action selector="switchChanged:" target="494" id="y83-vH-sIW"/>
+                        </connections>
+                    </customView>
+                    <customView id="CAh-nX-5yI" customClass="ITSwitch">
+                        <rect key="frame" x="100" y="103" width="32" height="20"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
+                                <color key="value" red="0.98508781934306455" green="0.1556227189781022" blue="0.042455520072992699" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="switchChanged:" target="494" id="SoY-el-rv8"/>
+                        </connections>
+                    </customView>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="0QQ-Rg-pWh" firstAttribute="leading" secondItem="372" secondAttribute="leading" constant="20" id="8Xt-zt-vAZ"/>
-                    <constraint firstAttribute="bottom" secondItem="0QQ-Rg-pWh" secondAttribute="bottom" constant="20" id="NN1-bB-QhN"/>
-                    <constraint firstItem="0QQ-Rg-pWh" firstAttribute="top" secondItem="372" secondAttribute="top" constant="20" id="t4h-wg-vcC"/>
-                    <constraint firstAttribute="trailing" secondItem="0QQ-Rg-pWh" secondAttribute="trailing" constant="20" id="yp7-21-pDS"/>
-                </constraints>
             </view>
         </window>
         <customObject id="494" customClass="ITAppDelegate">
