--- a/ITSwitch-Demo/ITSwitch-Demo/Base.lproj/MainMenu.xib
+++ b/ITSwitch-Demo/ITSwitch-Demo/Base.lproj/MainMenu.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="15A178w" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -10,7 +11,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <menu title="AMainMenu" systemMenu="main" id="29">
             <items>
                 <menuItem title="ITSwitch-Demo" id="56">
@@ -658,6 +659,7 @@
                     <customView id="0QQ-Rg-pWh" customClass="ITSwitch">
                         <rect key="frame" x="60" y="103" width="32" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <animations/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                                 <color key="value" red="0.090196078431372548" green="0.49411764705882355" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
@@ -670,6 +672,10 @@
                     <customView id="KC3-Wk-7Tp" customClass="ITSwitch">
                         <rect key="frame" x="20" y="20" width="112" height="70"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="on" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                         <connections>
                             <action selector="switchChanged:" target="494" id="FdO-a9-0T6"/>
                         </connections>
@@ -677,6 +683,7 @@
                     <customView id="wbL-QI-qCf" customClass="ITSwitch">
                         <rect key="frame" x="20" y="103" width="32" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <animations/>
                         <connections>
                             <action selector="switchChanged:" target="494" id="DmH-Gr-IeV"/>
                         </connections>
@@ -684,6 +691,7 @@
                     <customView id="CAh-nX-5yI" customClass="ITSwitch">
                         <rect key="frame" x="100" y="103" width="32" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                        <animations/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                                 <color key="value" red="0.98508781934306455" green="0.1556227189781022" blue="0.042455520072992699" alpha="1" colorSpace="calibratedRGB"/>
@@ -694,6 +702,7 @@
                         </connections>
                     </customView>
                 </subviews>
+                <animations/>
             </view>
         </window>
         <customObject id="494" customClass="ITAppDelegate">
