--- a/ITSwitch-Demo/ITSwitch-Demo/Base.lproj/MainMenu.xib
+++ b/ITSwitch-Demo/ITSwitch-Demo/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="15A178w" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
@@ -674,7 +674,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="on" value="YES"/>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="checked" value="YES"/>
                         </userDefinedRuntimeAttributes>
                         <connections>
                             <action selector="switchChanged:" target="494" id="FdO-a9-0T6"/>
